--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,43 @@
 version: 2.1
-
 jobs:
   build:
+    working_directory: ~/code
     docker:
-      - image: 'circleci/openjdk:11-jdk'
+      - image: circleci/android:api-29
+    environment:
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+#      - run:
+#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+#         command: sudo chmod +x ./gradlew
+      - run:
+          name: Update SDK Manager
+          command: yes | sdkmanager --update || exit 0
+      - run:
+          name: Licenses SDK Manager
+          command: yes | sdkmanager --licenses || exit 0
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
       - run:
           name: Analyze on SonarCloud
-          command: gradle build sonarqube"
-
+          command: ./gradlew sonarqube
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: app/build/reports
+          destination: reports
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: app/build/test-results
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 workflows:
   main:
     jobs:
