--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 jobs:
   build:
-    working_directory: ~/code
+    working_directory: ~/Maanaim-Lideres-Android
     docker:
       - image: circleci/android:api-29
     environment:
